--- a/store/application/.env.example
+++ b/store/application/.env.example
@@ -65,3 +65,8 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+OTEL_SERVICE_NAMESPACE=your_namespace
+OTEL_SERVICE_NAME=your_service
+OTEL_DEPLOYMENT_ENVIRONMENT=production
+OTEL_COLLECTOR_URL=http://otel-collector:4317
