--- a/admin/application/.env.example
+++ b/admin/application/.env.example
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
 
@@ -22,7 +22,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=sqlite
-DB_DATABASE=sqlite/database.sqlite
+DB_DATABASE=/var/www/admin_app/database/sqlite/database.sqlite
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
 # DB_DATABASE=laravel
@@ -65,3 +65,8 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+OTEL_SERVICE_NAMESPACE=your_namespace
+OTEL_SERVICE_NAME=your_service
+OTEL_DEPLOYMENT_ENVIRONMENT=production
+OTEL_COLLECTOR_URL=http://otel-collector:4317
