--- a/store/application/composer.json
+++ b/store/application/composer.json
@@ -8,7 +8,12 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^11.31",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "open-telemetry/exporter-otlp": "^1.2",
+        "open-telemetry/opentelemetry-auto-laravel": "^1.0",
+        "open-telemetry/opentelemetry-auto-psr18": "^1.0",
+        "open-telemetry/sdk": "^1.2",
+        "open-telemetry/transport-grpc": "^1.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
@@ -63,7 +68,8 @@
         "sort-packages": true,
         "allow-plugins": {
             "pestphp/pest-plugin": true,
-            "php-http/discovery": true
+            "php-http/discovery": true,
+            "tbachert/spi": true
         }
     },
     "minimum-stability": "stable",
