feat(otel): add composer service to caddy network

--- a/admin/docker/docker-compose.yaml
+++ b/admin/docker/docker-compose.yaml
@@ -42,7 +42,8 @@ services:
     working_dir: /var/www/admin_app
     volumes:
       - ../application:/var/www/admin_app
-    command: ["composer"]
+    networks:
+      - caddy
 networks:
   caddy:
     external: true
