--- a/store/docker/docker-compose.yaml
+++ b/store/docker/docker-compose.yaml
@@ -42,7 +42,8 @@ services:
     working_dir: /var/www/store_app
     volumes:
       - ../application:/var/www/store_app
-    command: ["composer"]
+    networks:
+      - caddy
 networks:
   caddy:
     external: true
